--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        tr, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
 <a href="/usr">Go to Users Controller</a><br>
 <a href="/pos">Go to Posts Controller</a><br>
 <a href="/alb">Go to Albums Controller</a><br>
 <h1>Logs</h1>
-<tr th:each="log: ${logs}">
-    <td th:text="${log.getId()}" />
-    <td th:text="${log.getUsername()}" />
-    <td th:text="${log.getUrl()}" />
-    <td th:text="${log.getResult()}" />
-    <td th:text="${log.getDate()}" />
-    <br>
-</tr>
+<table>
+    <tr th:each="log: ${logs}">
+        <td th:text="${log.getId()}" />
+        <td th:text="${log.getUsername()}" />
+        <td th:text="${log.getUrl()}" />
+        <td th:text="${log.getResult()}" />
+        <td th:text="${log.getDate()}" />
+    </tr>
+</table>
+
 </body>
 </html>
