--- a/src/main/resources/templates/albums.html
+++ b/src/main/resources/templates/albums.html
@@ -76,6 +76,9 @@
     });
 </script>
 <body ng-app="JPHTALBUMS" ng-controller="ALBMSCTRL">
+    <form action="/logout" method="post">
+        <button type="submit" class="btn btn-primary">Sign Out</button>
+    </form><br>
     <a href="/usr">Go to Users Controller</a><br>
     <a href="/pos">Go to Posts Controller</a><br><br>
 
