--- a/src/main/resources/templates/errorPage.html
+++ b/src/main/resources/templates/errorPage.html
@@ -5,6 +5,9 @@
     <title>Error page</title>
 </head>
 <body>
+    <form action="/logout" method="post">
+        <button type="submit" class="btn btn-primary">Sign Out</button>
+    </form><br>
     <h2>Access denied:((</h2><br>
     <a href="/">Return to main menu </a>
 </body>
