--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -80,6 +80,9 @@
 
 </script>
 <body ng-app="JPHTPOSTS" ng-controller="PSTCTRL">
+    <form action="/logout" method="post">
+        <button type="submit" class="btn btn-primary">Sign Out</button>
+    </form><br>
     <a href="/usr">Go to Users Controller</a><br>
     <a href="/alb">Go to Albums Controller</a><br><br>
 
