--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -116,6 +116,9 @@
 
 </script>
 <body ng-app="JPHT" ng-controller="CTRL">
+    <form action="/logout" method="post">
+        <button type="submit" class="btn btn-primary">Sign Out</button>
+    </form><br>
 
     <a href="/pos">Go to Posts Controller</a><br>
     <a href="/alb">Go to Albums Controller</a><br><br>
